<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>building_systems_visualizer</name>
  <version>1.9999.0</version>
  <description>A visualizer for doors and lifts</description>
  <maintainer email="yadunund@openrobotics.org">yadu</maintainer>
  <license>Apache License 2.0</license>

  <depend>rmf_lift_msgs_rolling</depend>
  <depend>rmf_door_msgs_rolling</depend>
  <depend>building_map_msgs_rolling</depend>
  <depend>geometry_msgs_rolling</depend>
  <depend>rmf_schedule_visualizer_msgs_rolling</depend>

  <test_depend>ament_copyright_rolling</test_depend>
  <test_depend>ament_flake8_rolling</test_depend>
  <test_depend>ament_pep257_rolling</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
