<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_planning_visualizer</name>
  <version>0.0.0</version>
  <description>The backend of a visualizer for planning in rmf</description>
  <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>visualizer_utils</depend>
  <depend>rmf_traffic</depend>
  <depend>websocketpp</depend>
  <depend>rclcpp</depend>
  <depend>building_map_msgs</depend>
  
  <exec_depend>building_map_tools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
