<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_schedule_visualizer</name>
  <version>1.9999.0</version>
  <description>A visualizer for trajectories in rmf schedule</description>
  <maintainer email="yadunund@openrobotics.org">Yadunund Vijay</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_rolling</buildtool_depend>

  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_traffic_msgs</depend>
  <depend>rclcpp_rolling</depend>
  <depend>libwebsocketpp-dev</depend>
  <depend>geometry_msgs_rolling</depend>
  <depend>nav_msgs_rolling</depend>
  <depend>visualization_msgs_rolling</depend>
  <depend>rmf_schedule_visualizer_msgs</depend>
  <depend>building_map_msgs</depend>
  <depend>boost</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-regex-dev</depend>
  <depend>libboost-random-dev</depend>
  <depend>libboost-system-dev</depend>
  <depend>rosidl_default_generators_rolling</depend>
  <depend>builtin_interfaces_rolling</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>

  <test_depend>ament_lint_auto_rolling</test_depend>
  <test_depend>ament_lint_common_rolling</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
